--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -229,6 +229,11 @@
 </div>
 <div id="loadingOverlay"><div class="spinner"></div></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<script src="../shared/firebase-config.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script>
 var editModal = null;
@@ -309,34 +314,11 @@ async function saveProfile() {
     loadProfile(); 
     showAlert('alertMessage', 'Perfil actualizado correctamente!', 'success');
     // Apply theme change
-    applyTheme(theme);
+    if (window.applyTheme) applyTheme(theme);
   }
   else { showAlert('editAlert', res.message || 'Error.', 'error'); }
 }
 
-function applyTheme(theme) {
-  if (theme === 'dark') {
-    document.body.style.backgroundColor = '#1a1a2e';
-    document.body.style.color = '#ffffff';
-    var cards = document.querySelectorAll('.modern-card, .stat-card');
-    cards.forEach(function(card) {
-      card.style.backgroundColor = '#16213e';
-      card.style.color = '#ffffff';
-    });
-    var titles = document.querySelectorAll('.section-title, .page-title, .info-label, .info-value, .stat-value, .stat-label');
-    titles.forEach(function(t) {
-      t.style.color = '#ffffff';
-    });
-  } else {
-    document.body.style.backgroundColor = '#eef1f7';
-    document.body.style.color = '#2c3e50';
-    var cards = document.querySelectorAll('.modern-card, .stat-card');
-    cards.forEach(function(card) {
-      card.style.backgroundColor = 'white';
-      card.style.color = '';
-    });
-  }
-}
 async function changePassword() {
   var np = document.getElementById('newPassword').value;
   var cp = document.getElementById('confirmPassword').value;
@@ -384,7 +366,8 @@ function exportDataPDF() {
   showAlert('alertMessage', 'PDF exportado!', 'success');
 }
 function deleteAccount() { if (confirm('Eliminar cuenta? Esta accion no se puede deshacer.')) { AuthSystem.deleteAccount(); window.location.href = '../login.html'; } }
-function logout() { if (confirm('¿Cerrar sesión?')) { AuthSystem.logout(); window.location.href = '../login.html'; } }
+function logout() { if (confirm('Cerrar sesion?')) { AuthSystem.logout(); window.location.href = '../login.html'; } }
 </script>
 </body>
 </html>
+
