--- a/public/profile/settings.html
+++ b/public/profile/settings.html
@@ -149,6 +149,11 @@
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<script src="../shared/firebase-config.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script>
 var currentUser = null;
@@ -268,7 +273,7 @@ function savePreferences() {
     if (saveBtn) { saveBtn.disabled = false; saveBtn.innerHTML = '<i class="fas fa-check me-2"></i>Guardar Preferencias'; }
     showAlert(result.message || 'Preferencias guardadas!', 'success');
     // Apply theme
-    applyTheme(settings.theme);
+    if (window.applyTheme) applyTheme(settings.theme);
   });
 }
 
@@ -327,7 +332,7 @@ function applyTheme(theme) {
   }
 }
 function doLogout() {
-  if (confirm('¿Cerrar sesión?')) {
+  if (confirm('Cerrar sesion?')) {
     var auth = window.AuthService || window.Auth;
     if (auth && auth.logout) {
       auth.logout().then(function() { window.location.href = '../login.html'; });
@@ -340,3 +345,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
