--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -123,7 +123,7 @@
     .status-overdue { background: linear-gradient(135deg, #e74c3c, #c0392b); color: white; }
     
     /* Buttons */
-    .btn { border-radius: 10px; padding: 12px 25px; font-weight: 500; transition: all 0.3s; border: none; }
+    .btn { border-radius: 8px; padding: 8px 16px; font-weight: 500; transition: all 0.3s; border: none; font-size: 0.9rem; }
     .btn-primary { background: linear-gradient(135deg, #2a4d9c, #3a6cd6); color: white; }
     .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 5px 20px rgba(42, 77, 156, 0.4); color: white; }
     .btn-success { background: linear-gradient(135deg, #1abc9c, #16a085); color: white; }
@@ -273,21 +273,24 @@
     <main class="main-content col">
       <div class="page-header">
         <h1 class="page-title"><i class="fas fa-file-import"></i> Facturas recibidas</h1>
-        <div class="action-buttons">
-          <button class="btn btn-primary" id="btnNewInvoice">
-            <i class="fas fa-plus me-2"></i>Nueva factura
+        <div class="action-buttons" style="display: flex; gap: 8px; flex-wrap: wrap; align-items: center;">
+          <button class="btn btn-primary" id="btnNewInvoice" onclick="openNewInvoiceModal()">
+            <i class="fas fa-plus me-1"></i>Nueva factura
           </button>
-          <button class="btn btn-primary" id="btnNewInvoiceOCR">
-            <i class="fas fa-file-invoice me-2"></i>Factura por OCR
+          <button class="btn btn-primary" id="btnNewInvoiceOCR" onclick="openOCRModal()">
+            <i class="fas fa-file-invoice me-1"></i>OCR
           </button>
-          <button class="btn btn-secondary" id="btnFilter" style="margin-left:auto;">
-            <i class="fas fa-filter me-2"></i>Filtros
+          <button class="btn btn-success" id="btnImport" onclick="var m=bootstrap.Modal.getOrCreateInstance(document.getElementById('modalImport'));m.show()">
+            <i class="fas fa-file-import me-1"></i>Importar
           </button>
-          <button class="btn btn-success" id="btnDownload">
-            <i class="fas fa-file-pdf me-2"></i>Descargar PDF
+          <button class="btn btn-info" id="btnExport" onclick="var m=bootstrap.Modal.getOrCreateInstance(document.getElementById('modalExport'));m.show()">
+            <i class="fas fa-file-export me-1"></i>Exportar
           </button>
-          <button class="btn btn-secondary" id="refreshBtn">
-            <i class="fas fa-sync-alt me-2"></i>Actualizar
+          <button class="btn btn-secondary" id="btnFilter" onclick="toggleFilter()">
+            <i class="fas fa-filter me-1"></i>Filtros
+          </button>
+          <button class="btn btn-success" id="btnDownload" onclick="exportToPDF()">
+            <i class="fas fa-file-pdf me-1"></i>PDF
           </button>
         </div>
       </div>
@@ -363,14 +366,17 @@
                 <th><i class="fas fa-file-invoice me-2"></i>Número</th>
                 <th><i class="fas fa-building me-2"></i>Proveedor</th>
                 <th><i class="fas fa-calendar me-2"></i>Fecha</th>
-                <th><i class="fas fa-euro-sign me-2"></i>Importe</th>
+                <th><i class="fas fa-file-invoice-dollar me-2"></i>Base</th>
+                <th><i class="fas fa-percent me-2"></i>IVA %</th>
+                <th><i class="fas fa-coins me-2"></i>IVA</th>
+                <th><i class="fas fa-euro-sign me-2"></i>Total</th>
                 <th><i class="fas fa-flag me-2"></i>Estado</th>
                 <th><i class="fas fa-cog me-2"></i>Acciones</th>
               </tr>
             </thead>
             <tbody id="invoiceTBody">
               <tr>
-                <td colspan="6" class="text-center text-muted">Cargando datos...</td>
+                <td colspan="9" class="text-center text-muted">Cargando datos...</td>
               </tr>
             </tbody>
           </table>
@@ -407,12 +413,22 @@
             <input type="text" name="supplier" class="form-control" placeholder="Nombre del proveedor" required />
           </div>
           <div class="mb-3">
+            <label class="form-label"><i class="fas fa-id-card me-2"></i>NIF Proveedor</label>
+            <input type="text" name="supplierNif" class="form-control" placeholder="NIF del proveedor" />
+          </div>
+          <div class="mb-3">
             <label class="form-label"><i class="fas fa-calendar me-2"></i>Fecha</label>
             <input type="date" name="invoiceDate" class="form-control" required />
           </div>
-          <div class="mb-3">
-            <label class="form-label"><i class="fas fa-euro-sign me-2"></i>Importe (€)</label>
-            <input type="number" step="0.01" name="amount" class="form-control" placeholder="0.00" required />
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <label class="form-label"><i class="fas fa-file-invoice-dollar me-2"></i>Base Imponible (€)</label>
+              <input type="number" step="0.01" name="amount" class="form-control" placeholder="0.00" required />
+            </div>
+            <div class="col-md-6">
+              <label class="form-label"><i class="fas fa-percent me-2"></i>IVA (%)</label>
+              <input type="number" step="0.01" name="ivaRate" class="form-control" placeholder="21" value="21" />
+            </div>
           </div>
           <div class="mb-3">
             <label class="form-label"><i class="fas fa-flag me-2"></i>Estado</label>
@@ -461,12 +477,23 @@
   </div>
 </div>
 
+<!-- Hidden file input for import -->
+<input type="file" id="importFileInput" accept=".csv" style="display: none;" />
+
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<script src="../shared/firebase-config.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script src="./Invoice_recieved.js"></script>
+
+
 
 <!-- Modal Ver Factura -->
 <div class="modal fade" id="viewInvoiceModal" tabindex="-1">
@@ -479,6 +506,71 @@
       <div class="modal-body" id="viewInvoiceContent"></div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Importar Facturas Recibidas -->
+<div class="modal fade" id="modalImport" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"><i class="fas fa-file-import me-2"></i>Importar Facturas Recibidas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label class="form-label">Seleccionar archivo CSV</label>
+          <input type="file" id="importFileInputReceived" class="form-control" accept=".csv" />
+        </div>
+        <div class="alert alert-info">
+          <i class="fas fa-info-circle me-2"></i>
+          <strong>Formato requerido:</strong> El CSV debe tener las columnas: Numero, Proveedor, NIF, Fecha, Base Imponible, IVA Rate, Estado
+        </div>
+        <button type="button" class="btn btn-info" onclick="downloadReceivedInvoiceTemplate()">
+          <i class="fas fa-download me-2"></i>Descargar plantilla
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success" id="confirmImportBtn">
+          <i class="fas fa-file-import me-2"></i>Importar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Exportar Facturas Recibidas -->
+<div class="modal fade" id="modalExport" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"><i class="fas fa-file-export me-2"></i>Exportar Facturas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label class="form-label">Formato</label>
+          <select id="exportFormat" class="form-select">
+            <option value="pdf">PDF</option>
+            <option value="csv">CSV</option>
+            <option value="excel">Excel</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Periodo</label>
+          <select id="exportPeriod" class="form-select">
+            <option value="all">Todas</option>
+            <option value="month">Este mes</option>
+            <option value="year">Este año</option>
+          </select>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="confirmExportBtn">Exportar</button>
       </div>
     </div>
   </div>
