--- a/public/login.html
+++ b/public/login.html
@@ -120,10 +120,13 @@
           <div class="demo-account" onclick="fillDemoLogin('admin@demo.com', 'demo123')">
             <i class="fas fa-user-shield"></i>
             <div><strong>Administrador</strong><small>admin@demo.com / demo123</small></div>
+          </div>
           <div class="demo-account" onclick="fillDemoLogin('test@example.com', '123456')">
             <i class="fas fa-user"></i>
             <div><strong>Usuario Prueba</strong><small>test@example.com / 123456</small></div>
+          </div>
         </div>
+      </div>
     </div>
 
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
