`Refactor code to use store.js with Firebase and localStorage, update various files to use new store.js functions and Firebase integration`

--- a/public/expense/expense.html
+++ b/public/expense/expense.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -433,6 +433,9 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
 <script src="../shared/firebase-config.js"></script>
+<script src="../shared/firebase-integration.js"></script>
+<script src="../shared/firebase-sync.js"></script>
+<script src="../shared/store.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script src="./expense.js"></script>
 
