--- a/public/Invoice-issued/invoice-issued.html
+++ b/public/Invoice-issued/invoice-issued.html
@@ -418,6 +418,9 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
 <script src="../shared/firebase-config.js"></script>
+<script src="../shared/firebase-integration.js"></script>
+<script src="../shared/firebase-sync.js"></script>
+<script src="../shared/store.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script src="./invoice-issued.js"></script>
 
@@ -534,10 +537,13 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
   
-  // Refresh button
-  document.getElementById('refreshBtn').addEventListener('click', function() {
-    location.reload();
-  });
+  // Refresh button - only add event listener if element exists
+  var refreshBtn = document.getElementById('refreshBtn');
+  if (refreshBtn) {
+    refreshBtn.addEventListener('click', function() {
+      location.reload();
+    });
+  }
   
   // Sidebar link handling
   document.querySelectorAll('.sidebar-link').forEach(function(link) {
