--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirect to Login - UPSEN Accounting</title>
+    <title>Redirect to Login - FactuFácil</title>
     <meta http-equiv="refresh" content="0; url=./login.html">
 </head>
 <body>
