--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -489,8 +489,15 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<!-- Config -->
 <script src="../shared/firebase-config.js"></script>
+<!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Sync service -->
+<script src="../shared/firebase-sync.js"></script>
+<!-- Store (uses sync service) -->
+<script src="../shared/store.js"></script>
+<!-- Page specific -->
 <script src="./Invoice_recieved.js"></script>
 
 
