--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Presupuestos - UPSEN Accounting</title>
+  <title>Presupuestos - FactuFácil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -394,7 +394,12 @@
 
 <!-- Firebase Config & Auth -->
 <script src="../shared/firebase-config.js"></script>
+<!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Sync service -->
+<script src="../shared/firebase-sync.js"></script>
+<!-- Store (uses sync service) -->
+<script src="../shared/store.js"></script>
 <script src="script.js"></script>
 <script>
 // Load user info
