--- a/public/frontPage/frontPage-restore.html
+++ b/public/frontPage/frontPage-restore.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel de Control - UPSEN Accounting</title>
+  <title>Panel de Control - FactuFácil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -31,7 +31,7 @@
 </head>
 <body>
   <aside class="sidebar">
-    <div class="sidebar-header">Accounting</div>
+    <div class="sidebar-header">FactuFácil</div>
     <ul class="sidebar-menu">
       <li class="active"><a href="frontPage.html" class="sidebar-link">Panel de control</a></li>
       <li><a href="../expense/expense.html" class="sidebar-link">Gastos</a></li>
