--- a/public/frontPage/frontPage.html
+++ b/public/frontPage/frontPage.html
@@ -207,11 +207,14 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<!-- Config -->
 <script src="../shared/firebase-config.js"></script>
-<script src="../shared/firebase-integration.js"></script>
-<script src="../shared/firebase-sync.js"></script>
-<script src="../shared/store.js"></script>
+<!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Sync service -->
+<script src="../shared/firebase-sync.js"></script>
+<!-- Store (uses sync service) -->
+<script src="../shared/store.js"></script>
 </head>
 <body>
 
