--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Perfil - UPSEN Accounting</title>
+  <title>Perfil - FactuFácil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -74,7 +74,7 @@
 <div class="container-fluid p-0">
   <div class="row m-0">
     <aside class="sidebar">
-      <div class="sidebar-header"><i class="fas fa-chart-line"></i>Accounting</div>
+      <div class="sidebar-header"><i class="fas fa-chart-line"></i>FactuFácil</div>
       <ul class="sidebar-menu">
         <li><a href="../frontPage/frontPage.html" class="sidebar-link"><i class="fas fa-tachometer-alt"></i> Panel</a></li>
         <li><a href="../expense/expense.html" class="sidebar-link"><i class="fas fa-file-invoice-dollar"></i> Gastos</a></li>
@@ -233,11 +233,14 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<!-- Config -->
 <script src="../shared/firebase-config.js"></script>
-<script src="../shared/firebase-integration.js"></script>
-<script src="../shared/firebase-sync.js"></script>
-<script src="../shared/store.js"></script>
+<!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Sync service -->
+<script src="../shared/firebase-sync.js"></script>
+<!-- Store (uses sync service) -->
+<script src="../shared/store.js"></script>
 <script>
 var editModal = null;
 var passwordModal = null;
@@ -407,7 +410,7 @@ function exportDataPDF() {
   doc.rect(0, 0, 210, 35, 'F');
   doc.setTextColor(255, 255, 255);
   doc.setFontSize(20);
-  doc.text('UPSEN Accounting', 105, 18, {align:'center'});
+  doc.text('FactuFácil', 105, 18, {align:'center'});
   doc.setFontSize(12);
   doc.text('Perfil de Usuario', 105, 28, {align:'center'});
   doc.setTextColor(100);
