--- a/public/profile/settings.html
+++ b/public/profile/settings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Configuracion - UPSEN Accounting</title>
+  <title>Configuracion - FactuFácil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -52,7 +52,7 @@
 <div class="container-fluid">
   <div class="row">
     <aside class="sidebar">
-      <div class="sidebar-header"><i class="fas fa-chart-line me-2"></i>Accounting</div>
+      <div class="sidebar-header"><i class="fas fa-chart-line me-2"></i>FactuFácil</div>
       <ul class="sidebar-menu">
         <li><a href="../frontPage/frontPage.html" class="sidebar-link"><i class="fas fa-tachometer-alt"></i> Panel</a></li>
         <li><a href="../expense/expense.html" class="sidebar-link"><i class="fas fa-file-invoice-dollar"></i> Gastos</a></li>
@@ -153,8 +153,14 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+<!-- Config -->
 <script src="../shared/firebase-config.js"></script>
+<!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Sync service -->
+<script src="../shared/firebase-sync.js"></script>
+<!-- Store (uses sync service) -->
+<script src="../shared/store.js"></script>
 <script>
 var currentUser = null;
 function getEl(id) { return document.getElementById(id); }
