funcionalidade para tudo ser guardado e chamado no firebase

--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -311,8 +311,8 @@
               <tbody id="itemsTbody">
                 <tr>
                   <td><input type="text" class="form-control desc" placeholder="Artículo"></td>
-                  <td><input type="number" class="form-control qty" value="1" min="1"></td>
-                  <td><input type="number" class="form-control unit" value="0" step="0.01"></td>
+                  <td><input type="number" class="form-control qty" value="1" min="1" oninput="updateTotals()"></td>
+                  <td><input type="number" class="form-control unit" value="0" step="0.01" oninput="updateTotals()"></td>
                   <td class="line-total">0.00</td>
                   <td><button type="button" class="btn btn-danger btn-sm remove-btn">X</button></td>
                 </tr>
@@ -402,7 +402,7 @@
 <script src="../shared/store.js"></script>
 <script src="script.js"></script>
 <script>
-// Load user info
+// Load user info and sync data on page load
 function loadUserInfo() {
   try {
     var session = localStorage.getItem('upsen_current_user');
@@ -416,6 +416,24 @@ function loadUserInfo() {
       }
     }
   } catch (e) {}
+}
+
+// Sync budgets from Firebase on page load
+async function syncBudgetsOnLoad() {
+  // Wait a bit for Firebase to initialize
+  await new Promise(resolve => setTimeout(resolve, 1000));
+  
+  // Try to sync from Firebase
+  if (window.FirebaseSync && window.FirebaseSync.syncCollectionToLocalStorage) {
+    console.log('Sincronizando orçamentos do Firebase...');
+    await window.FirebaseSync.syncCollectionToLocalStorage('budgets');
+    console.log('Orçamentos sincronizados!');
+    
+    // Reload the budgets list if modal is open
+    if (window.loadSavedBudgets) {
+      window.loadSavedBudgets();
+    }
+  }
 }
 
 // Confirm logout
@@ -432,9 +450,10 @@ function confirmLogout() {
   }
 }
 
-// Initialize user info on page load
+// Initialize on page load
 document.addEventListener('DOMContentLoaded', function() {
   loadUserInfo();
+  syncBudgetsOnLoad();
 });
 </script>
 </body>
