`Merged TODO files and updated code to reflect changes in Firebase Sync and Realtime Sync functionality`

--- a/public/frontPage/frontPage.html
+++ b/public/frontPage/frontPage.html
@@ -211,6 +211,10 @@
 <script src="../shared/firebase-config.js"></script>
 <!-- Auth FIRST - initializes Firebase -->
 <script src="../shared/auth-system.js"></script>
+<!-- Firebase Migration Utility -->
+<script src="../shared/firebase-migration.js"></script>
+<!-- Data Migration (users -> companies) -->
+<script src="../shared/data-migration.js"></script>
 <!-- Sync service -->
 <script src="../shared/firebase-sync.js"></script>
 <!-- Store (uses sync service) -->
