--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -239,6 +239,8 @@
 <script src="../shared/auth-system.js"></script>
 <!-- Sync service -->
 <script src="../shared/firebase-sync.js"></script>
+<!-- Data Migration -->
+<script src="../shared/data-migration.js"></script>
 <!-- Store (uses sync service) -->
 <script src="../shared/store.js"></script>
 <script>
