--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -398,6 +398,8 @@
 <script src="../shared/auth-system.js"></script>
 <!-- Sync service -->
 <script src="../shared/firebase-sync.js"></script>
+<!-- Data Migration -->
+<script src="../shared/data-migration.js"></script>
 <!-- Store (uses sync service) -->
 <script src="../shared/store.js"></script>
 <script src="script.js"></script>
