--- a/public/profile/settings.html
+++ b/public/profile/settings.html
@@ -159,6 +159,8 @@
 <script src="../shared/auth-system.js"></script>
 <!-- Sync service -->
 <script src="../shared/firebase-sync.js"></script>
+<!-- Data Migration -->
+<script src="../shared/data-migration.js"></script>
 <!-- Store (uses sync service) -->
 <script src="../shared/store.js"></script>
 <script>
